# dev-standards

./: README.md
docs/context-preservation/: README.md
docs/setup/: README.md
git/gitignore-templates/: python.gitignore
git/hooks/: README.md  TEAM_USAGE.md  install-protect-main.ps1  install-protect-main.sh  install-web-hooks.ps1  pre-commit-protect-main  pre-commit-web-app
python/configs/: pyproject.toml
python/project-templates/: README.md
python/requirements/: requirements-dev.txt  requirements-frozen.txt  requirements.txt
python/web-frameworks/flask/: app-template.py
python/web-frameworks/flask/deployment/: requirements-web.txt  wsgi-template.py
python/web-frameworks/flask/templates/: base.html.template  home.html.template
scripts/: build_exe.ps1  check_env.py  dev.ps1  setup_env.ps1
vscode/extensions/: extensions.json
vscode/settings/: launch.json  settings.json  tasks.json
vscode/settings/scripts/: stash_and_switch.sh
